# deepresearch

./: README.md  index.html
assets/: index-BV_cuLxk.js  index-CLSiO6Ox.js  index-DoQ9C5Id.js  index-R6MHity2.css
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: __init__.py  clarifying_question.py  duckduckgo_provider.py  llm_client.py  main.py  model.py  prompts.py  provider_urls.py  research_brief.py  research_errors.py  research_findings.py  research_report.py  research_sources.py  runtime_config.py  schemas.py  search_plan.py  settings.py  text_processing.py
frontend/: .env.example  .env.production.example  .gitignore  index.html  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  reportLibrary.ts  runConfig.ts  styles.css  workspaceState.ts
