[project]
name = "deepresearch-langgraph-backend"
version = "0.1.0"
description = "LangGraph implementation of the deep research backend."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "langchain>=1.0.0",
    "langchain-core>=1.4.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "ddgs>=9.0.0",
    "python-dotenv>=1.0.1",
    "tavily-python>=0.5.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
